# shrimp

./: .gitignore  Cargo.toml  README.md
board/: Cargo.toml
board/src/: board.rs  boolboard.rs  lib.rs  small.rs
engine/: Cargo.toml
engine/src/: main.rs
evaluation/: Cargo.toml
evaluation/src/: eval.rs
fuzzer/: README.md
movegen/: Cargo.toml
movegen/benches/: perft_bench.rs
movegen/src/: cart_prod.rs  genmove.rs  lib.rs  makeunmake.rs
movegen/tests/: body.json  food.json  four_player.json  head.json  movegen.json  wall.json
search/: Cargo.toml
search/src/: lib.rs  search.rs  table.rs
tuner/: Cargo.toml  README
