[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
board = { path = "../board" }
search = { path = "../search" }
rocket = { version = "0.4.10", default-features = false }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json"]
