[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
board = { path = "../board" }
search = { path = "../search" }
movegen = {path = "../movegen"}
rocket = {version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0.117", features = ["derive"] }
pretty_assertions = "1"
