[package]
name = "movegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.133", features = ["derive"]}
serde_json = { version = "1.0"}
board = {path = "../board"}
itertools = "0.10.3"
permutator = "0.4.3"