[package]
name = "movegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
pretty_assertions = "1"
serde = {version = "1.0.133", features = ["derive"]}
serde_json = { version = "1.0"}
criterion = "0.3"


[dependencies]
board = {path = "../board"}
permutator = "0.4.3"
tinyvec = "1.5.1"

[[bench]]
name = "perft_bench"
harness = false

[profile.bench]
debug = true